--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "test:xunit": "npm run test:unit | tap-xunit",
     "test:coverage": "nyc --reporter=lcov --reporter=text-summary tapes -- 'test/unit/**/**.test.js'",
     "test:coverage-check": "npm run test:coverage && nyc check-coverage",
-    "audit:resolve": "SHELL=sh resolve-audit --production",
-    "audit:check": "SHELL=sh check-audit --production",
+    "audit:fix": "npm audit fix",
+    "audit:check": "npx audit-ci --config ./audit-ci.jsonc",
     "dep:check": "npx ncu -e 2",
     "dep:update": "npx ncu -u",
     "release": "standard-version --releaseCommitMessageFormat 'chore(release): {{currentTag}} [skip ci]'"
@@ -46,19 +46,19 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "bignumber.js": "9.0.1"
+    "bignumber.js": "9.1.1"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "faucet": "0.0.1",
-    "npm-audit-resolver": "2.3.1",
-    "npm-check-updates": "11.8.5",
+    "audit-ci": "^6.6.1",
+    "eslint": "8.47.0",
+    "faucet": "0.0.4",
+    "npm-check-updates": "16.13.0",
     "nyc": "15.1.0",
     "pre-commit": "1.2.2",
-    "standard": "16.0.3",
-    "standard-version": "^9.3.1",
+    "standard": "17.1.0",
+    "standard-version": "^9.5.0",
     "tap-xunit": "2.4.1",
-    "tape": "5.3.1",
+    "tape": "5.6.6",
     "tapes": "4.1.0"
   }
 }
